@@ -139,6 +139,7 @@ settings.py::
         'allauth.account',
         'allauth.socialaccount',
 	# ... include the providers you want to enable:
+        'allauth.socialaccount.providers.dropbox',
         'allauth.socialaccount.providers.facebook',
         'allauth.socialaccount.providers.google',
         'allauth.socialaccount.providers.github',
@@ -147,6 +148,7 @@ settings.py::
         'allauth.socialaccount.providers.persona',
         'allauth.socialaccount.providers.soundcloud',
         'allauth.socialaccount.providers.stackexchange',
+        'allauth.socialaccount.providers.twitch',
         'allauth.socialaccount.providers.twitter',
         'allauth.socialaccount.providers.weibo',
         ...
