@@ -1,3 +1,7 @@
+2013-03-08  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Robert Balfre contributed Dropbox support, thanks!
+
 2013-02-19  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added support for Weibo.
